@@ -8,6 +8,7 @@
 * Fixed dereference method on Db class to correctly dereference Db reference objects. 
 * Moved connect object onto Db class(Db.connect) as well as keeping backward compatibility.
 * Removed writeBuffer method from gridstore, write handles switching automatically now.
+* Changed readBuffer to read on Gridstore, Gridstore now only supports Binary Buffers no Strings anymore.
 
 0.9.8-4 2012-01-28
 * Added reIndex command to collection and db level.
